<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMain">

    <FrameLayout
        android:id="@+id/fl_bar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/log_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="16dp"
            android:layout_gravity="center|end"
            android:src="@drawable/ic_log_out" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="64dp"
        android:paddingEnd="64dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_1"
            style="@style/MainFontBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="24dp"
            android:text="@string/add_touch_id" />

        <TextView
            android:id="@+id/text_2"
            style="@style/MainFontBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textStyle="normal"
            android:gravity="center"
            android:paddingBottom="24dp"
            android:text="@string/use_touch_id_"
            app:layout_constraintTop_toBottomOf="@+id/fl_bar" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="64dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_touch_id"
            android:layout_gravity="center"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="64dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_touch_id"
            android:gravity="center"
            style="@style/MainFontBold"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="64dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/button_yes"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="47dp"
                android:textSize="14dp"
                style="@style/MainFontBold"
                android:gravity="center"
                android:background="@drawable/border"
                android:textStyle="bold"
                android:text="@string/yes"/>
            
            <Space
                android:layout_width="20dp"
                android:layout_height="match_parent"/>

            <TextView
                android:id="@+id/button_no"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="14dp"
                style="@style/MainFontBold"
                android:gravity="center"
                android:layout_height="47dp"
                android:background="@drawable/border"
                android:textStyle="bold"
                android:text="@string/no"/>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>