<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_check"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/replay_pick_launch_cod" />

            <TextView
                android:text="@string/art_"
                android:id="@+id/art"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name"
                tools:text="Арт: ТК1130" />

            <TextView
                android:id="@+id/count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name"
                tools:text="3 шт" />

            <TextView
                android:id="@+id/is_in_stock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/count"
                app:layout_constraintTop_toBottomOf="@+id/name"
                tools:text="В наличии" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/art">

                <Button
                    style="@style/MyActionNegativeButtonStyle"
                    android:text="@string/not_transfer"
                    android:id="@+id/button_not_transfer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    style="@style/MyActionPositiveButtonStyle"
                    android:text="@string/transfer_to_engineer"
                    android:id="@+id/button_transfer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    style="@style/MyActionPositiveButtonStyle"
                    android:text="@string/return_to_the_warehouse"
                    android:id="@+id/button_turn_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    style="@style/MyActionPositiveButtonStyle"
                    android:text="@string/install_in_device"
                    android:id="@+id/button_install"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>