<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMain">

    <LinearLayout
        android:id="@+id/ll_auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="42dp"
        android:paddingTop="95dp"
        android:paddingEnd="42dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/MainFontBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="48dp"
            android:paddingBottom="48dp"
            android:src="@drawable/ic_user_check" />

        <EditText
            android:id="@+id/et_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorWhite"
            android:drawableStart="@drawable/ic_auth_user"
            android:drawablePadding="16dp"
            android:hint="@string/login"
            android:text="test"
            style="@style/EditTextFont"
            android:paddingBottom="16dp"
            android:textColorHint="@color/colorWhite" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <EditText
            android:text="123456"
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:backgroundTint="@color/colorWhite"
            android:drawableStart="@drawable/ic_auth_lock"
            android:drawablePadding="16dp"
            android:hint="@string/password"
            android:paddingBottom="16dp"
            style="@style/EditTextFont"
            android:textColorHint="@color/colorWhite" />

        <TextView
            android:id="@+id/auth_error_massage"
            android:paddingStart="14dp"
            android:paddingTop="4dp"
            android:text="@string/wrong_pass"
            style="@style/MainFont"
            android:textSize="16sp"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:gravity="center|start"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_error_auth_background"/>

    </LinearLayout>


    <ImageView
        android:id="@+id/auth_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="42dp"
        android:src="@drawable/ic_arrow_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_auth" />

    <include
        android:id="@+id/progress"
        layout="@layout/progress_layout"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>