<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/return_to_warehouse"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorMain"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="16dp"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/MainFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:text="@string/install_in_device_"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/back_button"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/top_background"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/ic_my_profile_background"
        app:layout_constraintTop_toBottomOf="@id/cl_bar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_title"
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintTop_toBottomOf="@id/cl_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/group_single_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp">

            <TextView
                android:id="@+id/text_title"
                style="@style/CountsFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Картридж Kyocera TK1140 FS-1035/1135 7.2K SuperFine"
                android:textSize="15sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Space
                android:id="@+id/space_2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/art"
                style="@style/ProductArtStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/art_"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/space_2"
                tools:text="Арт: ТК1130" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/card_view_title">

        <EditText
            android:id="@+id/device_serial_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/colorHint"
            android:drawableStart="@drawable/ic_line_38"
            android:drawablePadding="7dp"
            android:hint="@string/device_serial_number"
            android:imeOptions="actionDone"
            android:inputType="textNoSuggestions|textCapSentences" />

        <TextView
            android:id="@+id/button_attach_serial_number"
            style="@style/DarkMainFont"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="7dp"
            android:background="@drawable/ic_background_counter_large"
            android:drawableStart="@drawable/ic_paperclip"
            android:drawablePadding="15dp"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:text="@string/attach_photo_of_the_serial_number" />


        <EditText
            android:id="@+id/sheet_counter"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/colorHint"
            android:drawableStart="@drawable/ic_line_38"
            android:drawablePadding="7dp"
            android:hint="@string/sheet_counter"
            android:imeOptions="actionDone"
            android:inputType="textNoSuggestions|textCapSentences" />

        <TextView
            android:id="@+id/button_attach_sheet_counter"
            style="@style/DarkMainFont"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="7dp"
            android:background="@drawable/ic_background_counter_large"
            android:drawableStart="@drawable/ic_paperclip"
            android:drawablePadding="15dp"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:text="@string/attach_sheet_counter" />

    </LinearLayout>

    <Button
        android:id="@+id/button_next"
        style="@style/MyActionPositiveButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:padding="14dp"
        android:text="@string/next"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
